cree el archivo css y aplique estilos para el h1 y h2 del archivo html

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ h1{
     text-transform: uppercase;
     text-align: center;
 }
+
+
 h2{
-    color: green;
-    background-color: bisque;
+    color: red;
+    background-color: black;
 }
